--- a/TW/Project/index.html
+++ b/TW/Project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
+    <title>Home</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
     <!-- <script src="js/main.js"></script> -->
@@ -21,8 +21,15 @@
             <nav>
                 <li><span><a href="">Home</a></span></li>
                 <li><span><a href="html/test1.html">Card game</a></span></li>
-                <li><span><a href="html/test1.html">Test2</a></span></li>
-                <li><span><a href="" class="button">Contact</a></span></li>
+                <li><span><a href="html/test2.html">Number Memory</a></span></li>
+                <li><span><div class="dropdown">
+                    <button class="dropbtn">Contact</button>
+                    <div class="dropdown-content">
+                      <a href="#">Link 1</a>
+                      <a href="#">Link 2</a>
+                      <a href="#">Link 3</a>
+                    </div>
+                  </div></span></li>
             </nav>
         </div>
     </header>
@@ -32,15 +39,10 @@
             <div class="textBox">
                 <h1>Home</h1><br>
                 <h2>Pushing the boundaries<br>of your <span>memory</span></h2>
-                <a href="#">Learn more</a>
+                <a href="html/test1.html">Play</a>
             </div>
         </div>
     </main>
-
-    <!-- <main>
-        <h1>Home</h1>
-    </main> -->
-
 
 </body>
 </html>
