--- a/TW/Project/html/test1.html
+++ b/TW/Project/html/test1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Card game</title>
+    <title>Card Game</title>
     <link rel="stylesheet" href="../css/test1.css">
 </head>
 <body>
@@ -17,12 +17,26 @@
             </div>
             <nav>
                 <li><span><a href="../index.html">Home</a></span></li>
-                <li><span><a href="">Card game</a></span></li>
-                <li><span><a href="../html/test2.html">Test2</a></span></li>
-                <li><span><a href="" class="button">Contact</a></span></li>
+                <li><span><a href="">Card Game</a></span></li>
+                <li><span><a href="../html/test2.html">Number Memory</a></span></li>
+                <li><span><div class="dropdown">
+                  <button class="dropbtn">Contact</button>
+                  <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                  </div>
+                </div></span></li>
             </nav>
         </div>
     </header>
+
+    <div class="content">
+      <div class="textBox">
+          <h1>Card game</h1><br>
+      </div>
+    </div>
+
     <main>
         <section class="memory-game">
             <div class="memory-card" data-framework="aurelia">
